@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: text.test,v 1.19.2.2 2007/12/13 00:31:34 hobbs Exp $
+# RCS: @(#) $Id: text.test,v 1.19.2.3 2009/10/22 22:10:08 dkf Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -1619,6 +1619,19 @@ test text-25.14 {undo with space-based path} {
     $t edit undo
     $t get 1.0 end
 } "line 1\n\n"
+
+test text-25.18 {patch 1469210 - inserting after undo} -setup {
+    destroy .t
+} -body {
+    text .t -undo 1
+    .t insert end foo
+    .t edit modified 0
+    .t edit undo
+    .t insert end bar
+    .t edit modified
+} -cleanup {
+    destroy .t
+} -result 1
 
 test text-26.1 {bug fix - 624372, ControlUtfProc long lines} {
     destroy .t
